results/SpecGenBench/4-shot/log-MatrixAdd-2023_11_27_22_59_26.txt
public class MatrixAdd {
    
    //@ requires a.length == 2 && b.length == 2;
    //@ requires a[0].length == 2 && b[0].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2;
    //@ ensures \forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; \result[i][j] == a[i][j] + b[i][j];
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        //@ assume \forall int i; 0 <= i && i < 2; c[i] != null && c[i].length == 2;
        //@ assume \forall int e; 0 <= e && e < 2; \forall int k; 0 <= k && k < 2; (e != k ==> c[e] != c[k]);
        //@ assume \forall int e; 0<= e && e < 2; (\forall int k; 0 <= k && k < 2; c[e] != a[k]);
        //@ assume \forall int e; 0<= e && e < 2; (\forall int k; 0 <= k && k < 2; c[e] != b[k]);
        for (int i = 0; i < 2; i++) {
            //@ maintaining 0 <= i && i <= 2;
            //@ maintaining \forall int x; 0 <= x && x < i; (\forall int y; 0 <= y && y < 2; c[x][y] == a[x][y] + b[x][y]);
            //@ decreases 2 - i;
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }

}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:18: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][j] + b[i][j];
                  ^
  Reason: Double rewriting of ident: i i_803_803___33 i_803_817___36
1 error

